--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^5.0.6",
+    "aws-amplify": "^5.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
