--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "contemplador",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,11 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.3.4",
-    "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.0.8",
-    "astro-aws-amplify": "^0.0.9",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3"
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/tailwind": "^6.0.2",
+    "astro": "^5.12.8",
+    "astro-aws-amplify": "^0.2.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.9.2"
   }
 }
