--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^6.0.2",
-    "astro": "^5.12.8",
+    "astro": "5.13.3",
     "astro-aws-amplify": "^0.2.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.9.2"
