--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^6.0.2",
-    "astro": "5.13.3",
+    "astro": "^5.13.3",
     "astro-aws-amplify": "^0.2.1",
-    "tailwindcss": "^4.1.12",
+    "tailwindcss": "^3.0.24",
     "typescript": "^5.9.2"
   }
 }
